random actors, random guess battons, restart (needs improvement)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,27 @@
 <div class="card">
-  <div class="card-image">
-    <figure class="image is-4by3">
-      <img class="cover" [src]="actors[a].photo" />
-    </figure>
-  </div>
-  <div class="card-content">
-    <p class="title is-4">{{ actors[a].name }}</p>
-    <button class="button is-link">{{ actors[a].name }}</button>
-    <button class="button is-link">{{ actors[b].name }}</button>
-    <button class="button is-link">{{ actors[c].name }}</button>
-  </div>
-  <div class="card-content">
-    <button (click)="onButtonClick()" class="button is-primary is-fullwidth">
-      Go!
-    </button>
-  </div>
+
+<div class="card-image">
+  <figure class="image is-4by3">
+    <img class="cover" [src]="actors[a].photo"  alt="image of an actor"/>
+  </figure>
+</div>
+
+<div class="card-content has-text-centered">
+  <p *ngIf="count>=10" class="title is-4">{{ score }}</p>
+
+  <ul>
+    <li><button class="button is-link">{{ actors[a].name }}</button></li>
+    <li><button class="button is-link">{{ actors[b].name }}</button></li>
+    <li><button class="button is-link">{{ actors[c].name }}</button></li>
+  </ul>
+
+</div>
+
+<div class="card-content">
+  <button *ngIf="count < 10" (click)="onGoClick()" class="button is-primary is-fullwidth">
+    Go!</button>
+  <button *ngIf="count === 10" (click)="onRestartClick()" class="button is-success is-light is-fullwidth">
+    Restart!</button>
+</div>
+
 </div>
