html and css adjustments

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* Add application styles & imports to this file! */
+html, body {
+  height: 100%;
+  font-size: 18px !important;
+  overflow: hidden !important;
+}
