--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,50 +1,3 @@
-.layout-box {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-
-  overflow: hidden;
-
-  .page-content {
-    flex-grow: 1;
-    overflow-y: scroll;
-  }
-}
-
-.top-bar {
-  width: 100%;
-  height: 68px;
-  background: linear-gradient(to right, $pink, $blue);
-
-  box-shadow: 0 0 10px 0 rgba(black, 0.15);
-
-  display: flex;
-  flex-shrink: 0; // prevent top bar from shrinking
-
-  // center the child element (the heading)
-  justify-content: center;
-  align-items: center;
-
-  h1 {
-    color: white;
-    font-size: 24px;
-  }
-}
-
-.card {
-  width: auto;
-  margin: 10px;
-}
-
-.cover {
-  object-fit: cover;
-}
-
-.card-content {
-  flex-flow: column;
-}
-
 .button {
-  flex-flow: column;
-  margin: 5px;
+  margin-inline-start: 1rem;
 }
