--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,7 @@
 <div class="layout-box">
 <div class="top-bar is-centered">
   <h1 class="title is-centered">Víte kdo jsem?</h1>
+  <p>{{ actors | json }}</p>
 </div>
 
 <div class="page-content">
