--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div style="has-text-centered">
-  <h1>Kdo je to?</h1>
   <div class="in-line">
-  <nav>
-  <a class="button is-primary"  routerLink= '/'>Home</a>
-  <a class="button is-primary"  routerLink= '/game'>Start</a>
-  </nav>
+    <nav>
+      <a class="button is-primary" routerLink="/">Home</a>
+      <a class="button is-primary" routerLink="/game">Start</a>
+    </nav>
+  </div>
+  <router-outlet></router-outlet>
 </div>
-<router-outlet ></router-outlet>
