--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
-<div style="has-text-centered">
+<div class="tile is-vertical is-8">
+<div class="tile">
+<div class="tile is-parent is-vertical">
+<article class="tile is-child notification is-white">
   <div class="in-line">
     <nav>
       <a class="button is-primary" routerLink="/">Home</a>
       <a class="button is-primary" routerLink="/game">Start</a>
     </nav>
   </div>
-  <router-outlet></router-outlet>
+</article>
 </div>
+</div>
+</div>
+  <router-outlet></router-outlet>
+
+  
+    
