--- a/src/app/game-over/game-over.component.html
+++ b/src/app/game-over/game-over.component.html
@@ -1,3 +1,30 @@
-<p>
-game-over!
-</p>
+<div class="tile is-parent">
+  <article class="tile is-child notification is-info">
+    <p class="title">game-over!</p>
+    <p class="subtitle">try again!</p>
+    <figure class="image is-4by3">
+      <img src="https://bulma.io/images/placeholders/640x480.png" />
+    </figure>
+  </article>
+</div>
+<div class="tile is-parent">
+  <article class="tile is-child notification is-danger">
+    <p class="title">Wide tile</p>
+    <p class="subtitle">Aligned with the right tile</p>
+    <div class="content">
+      <!-- Content -->
+    </div>
+  </article>
+</div>
+
+<div class="tile is-parent">
+  <article class="tile is-child notification is-success">
+    <div class="content">
+      <p class="title">Tall tile</p>
+      <p class="subtitle">With even more content</p>
+      <div class="content">
+        <!-- Content -->
+      </div>
+    </div>
+  </article>
+</div>
