--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,81 +1,42 @@
-<div class="layout-box">
-  <div class="top-bar is-centered">
-    <h1 class="title is-centered">Víte kdo jsem?</h1>
-  </div>
-
-  <div class="page-content">
-    <div class="card">
-      <div class="card-image">
-        <figure class="image is-4by3">
-          <img class="cover" [src]="actors[a].photo" alt="image of an actor" />
-        </figure>
-      </div>
-
-      <div class="card-content has-text-centered">
-        <p *ngIf="count >= 10" class="title is-4">{{ score }}</p>
-
-        <ul>
-          <li>
-            <button (click)="onGoClick()" class="button is-link">
-              {{ actors[a].name }}
-            </button>
-          </li>
-          <li>
-            <button class="button is-link">{{ actors[b].name }}</button>
-          </li>
-          <li>
-            <button class="button is-link">{{ actors[c].name }}</button>
-          </li>
-        </ul>
-      </div>
-
-      <div class="card-content">
-        <button
-          *ngIf="count < 10"
-          (click)="onGoClick()"
-          class="button is-primary is-fullwidth"
-        >
-          Go!
-        </button>
-        <button
-          *ngIf="count === 10"
-          (click)="onRestartClick()"
-          class="button is-success is-light is-fullwidth"
-        >
-          Restart!
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- New -->
 <div class="tile is-parent">
   <article class="tile is-child notification is-info">
-    <p class="title">game-over!</p>
-    <p class="subtitle">try again!</p>
+    <p class="title">Víš kdo jsem?</p>
+    <p class="subtitle">Zkus hádat!</p>
     <figure class="image is-4by3">
-      <img src="https://bulma.io/images/placeholders/640x480.png" />
+      <img class="cover" [src]="actors[a].photo" alt="image of an actor" />
     </figure>
   </article>
-</div>
-<div class="tile is-parent">
-  <article class="tile is-child notification is-danger">
-    <p class="title">Wide tile</p>
-    <p class="subtitle">Aligned with the right tile</p>
-    <div class="content">
-      <!-- Content -->
-    </div>
-  </article>
-</div>
 
-<div class="tile is-parent">
-  <article class="tile is-child notification is-success">
-    <div class="content">
-      <p class="title">Tall tile</p>
-      <p class="subtitle">With even more content</p>
-      <div class="content">
-        <!-- Content -->
-      </div>
-    </div>
+  <article class="tile is-child notification is-danger">
+    <p *ngIf="count >= 10" class="title is-4">{{ score }}</p>
+
+    <ul>
+      <li>
+        <button (click)="onGoClick()" class="button is-link">
+          {{ actors[a].name }}
+        </button>
+      </li>
+      <li>
+        <button class="button is-link">{{ actors[b].name }}</button>
+      </li>
+      <li>
+        <button class="button is-link">{{ actors[c].name }}</button>
+      </li>
+    </ul>
+
+    <button
+      *ngIf="count < 10"
+      (click)="onGoClick()"
+      class="button is-primary is-4by3"
+    >
+      Go!
+    </button>
+    <button
+      *ngIf="count === 10"
+      (click)="onRestartClick()"
+      class="button is-success is-light is-fullwidth"
+    >
+      Restart!
+    </button>
   </article>
 </div>
