--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<div class="tile is-parent">
+<div class="tile is-parent is-vertical is-5">
   <article class="tile is-child notification is-info">
     <p class="title">Víš kdo jsem?</p>
     <p class="subtitle">Zkus hádat!</p>
