--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="tile is-parent is-vertical is-5">
-  <article class="tile is-child notification is-warning">
+  <article class="menu">
     <nav>
       <a class="button is-primary" routerLink="/">Home</a>
       <a class="button is-primary" routerLink="/game">Start</a>
