--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="tile is-parent is-vertical is-5">
-  <article class="menu">
+<div class="field">
+  <div class="tile is-child notification is-warning">
     <nav>
       <a class="button is-primary" routerLink="/">Home</a>
       <a class="button is-primary" routerLink="/game">Start</a>
     </nav>
-  </article>
+  </div>
 </div>
 <router-outlet></router-outlet>
